started working on PosItems collection

--- a/client/lib/components/sales_prediction/revel_menu_link/view.html
+++ b/client/lib/components/sales_prediction/revel_menu_link/view.html
@@ -1,4 +1,5 @@
 <template name="revelMenuLink">
+  <button class="btn btn-warning update-pos">Update POS (Better dont touch this)</button>
   <div class="container-fluid revel-menu-link-component">
     <div class="agile-list row">
       {{#each state$menuItems}}
