--- a/client/stylesheets/components/navigation.less
+++ b/client/stylesheets/components/navigation.less
@@ -22,25 +22,27 @@
   }
 
   .nav-first-level-item:hover {
-    .slider.slider-for-1-menu-item {
-      height: 42px; // Height of one menu item(32px) + 10px margin
-      .slide-down;
-    }
-    .slider.slider-for-2-menu-item {
-      height: 74px;
-      .slide-down;
-    }
-    .slider.slider-for-3-menu-item {
-      height: 106px;
-      .slide-down;
-    }
-    .slider.slider-for-4-menu-item {
-      height: 138px;
-      .slide-down;
-    }
-    .slider.slider-for-5-menu-item {
-      height: 170px;
-      .slide-down;
+    .slider {
+      &.slider-for-1-menu-item {
+        height: 42px; // Height of one menu item(32px) + 10px margin
+        .slide-down;
+      }
+      &.slider-for-2-menu-item {
+        height: 74px;
+        .slide-down;
+      }
+      &.slider-for-3-menu-item {
+        height: 106px;
+        .slide-down;
+      }
+      &.slider-for-4-menu-item {
+        height: 138px;
+        .slide-down;
+      }
+      &.slider-for-5-menu-item {
+        height: 170px;
+        .slide-down;
+      }
     }
   }
 }
