--- a/client/stylesheets/globals/media.import.less
+++ b/client/stylesheets/globals/media.import.less
@@ -1,85 +1,116 @@
-@media (min-width: 768px) {
-  #page-wrapper {
-    position: inherit;
-    margin: 0 0 0 @sidebar-width;
-    //min-height: 1200px;
+body {
+  &.force-show-sidebar {
+    #page-wrapper {
+      position: inherit;
+      margin: 0 0 0 @sidebar-width;
+    }
+
+    #side-menu-nav-wrapper {
+      display: inline-block;
+      width: @sidebar-width;
+      position: fixed;
+    }
   }
 
-  .navbar-static-side {
-    z-index: 2001;
-    position: absolute;
-    width: @sidebar-width;
+  &.force-hide-sidebar {
+    #page-wrapper {
+      position: inherit;
+      margin: 0;
+    }
+
+    #side-menu-nav-wrapper {
+      display: none;
+    }
   }
 
-  .navbar-top-links .dropdown-messages,
-  .navbar-top-links .dropdown-tasks,
-  .navbar-top-links .dropdown-alerts {
-    margin-left: auto;
+  //wide screen
+  @media (min-width: 768px) {
+    #page-wrapper {
+      position: inherit;
+      margin: 0 0 0 @sidebar-width;
+
+    }
+
+    .navbar-static-side {
+      z-index: 2001;
+      position: absolute;
+      width: @sidebar-width;
+    }
+
+    .navbar-top-links .dropdown-messages,
+    .navbar-top-links .dropdown-tasks,
+    .navbar-top-links .dropdown-alerts {
+      margin-left: auto;
+    }
+  }
+
+  //mobile screen
+  @media (max-width: 768px) {
+    #page-wrapper {
+      position: inherit;
+      margin: 0;
+    }
+
+    #side-menu-nav-wrapper {
+      display: none;
+    }
+
+    .ibox-tools {
+      float: none;
+      text-align: right;
+      display: block;
+    }
   }
 }
 
-@media (max-width: 768px) {
-
-  #page-wrapper {
-    position: inherit;
-    margin: 0 0 0 0px;
-    //min-height: 1000px;
-  }
-
-  .body-small .navbar-static-side {
-    display: none;
-    z-index: 2001;
-    position: absolute;
-    width: 70px;
-  }
-
-  .body-small.mini-navbar .navbar-static-side {
-    display: block;
-  }
-
-  .lock-word {
-    display: none;
-  }
-
-  .navbar-form-custom {
-    display: none;
-  }
-
-  .navbar-header {
-    display: inline;
-    float: left;
-  }
-
-  .sidebard-panel {
-    z-index: 2;
-    position: relative;
-    width: auto;
-    min-height: 100% !important;
-  }
-
-  .sidebar-content .wrapper {
-    padding-right: 0px;
-    z-index: 1;
-  }
-
-  .fixed-sidebar.body-small .navbar-static-side {
-    display: none;
-    z-index: 2001;
-    position: fixed;
-    width: @sidebar-width;
-  }
-
-  .fixed-sidebar.body-small.mini-navbar .navbar-static-side {
-    display: block;
-  }
-
-  .ibox-tools {
-    float: none;
-    text-align: right;
-    display: block;
-  }
-
-}
+//
+//  .body-small .navbar-static-side {
+//    display: none;
+//    z-index: 2001;
+//    position: absolute;
+//    width: 70px;
+//  }
+//
+//  .body-small.mini-navbar .navbar-static-side {
+//    display: block;
+//  }
+//
+//  .lock-word {
+//    display: none;
+//  }
+//
+//  .navbar-form-custom {
+//    display: none;
+//  }
+//
+//  .navbar-header {
+//    display: inline;
+//    float: left;
+//  }
+//
+//  .sidebard-panel {
+//    z-index: 2;
+//    position: relative;
+//    width: auto;
+//    min-height: 100% !important;
+//  }
+//
+//  .sidebar-content .wrapper {
+//    padding-right: 0px;
+//    z-index: 1;
+//  }
+//
+//  .fixed-sidebar.body-small .navbar-static-side {
+//    display: none;
+//    z-index: 2001;
+//    position: fixed;
+//    width: @sidebar-width;
+//  }
+//
+//  .fixed-sidebar.body-small.mini-navbar .navbar-static-side {
+//    display: block;
+//  }
+//
 
 @media (max-width: 350px) {
 
