--- a/client/stylesheets/globals/media.import.less
+++ b/client/stylesheets/globals/media.import.less
@@ -1,28 +1,4 @@
-body {
-  &.force-show-sidebar {
-    #page-wrapper {
-      position: inherit;
-      margin: 0 0 0 @sidebar-width;
-    }
-
-    #side-menu-nav-wrapper {
-      display: inline-block;
-      width: @sidebar-width;
-      position: fixed;
-    }
-  }
-
-  &.force-hide-sidebar {
-    #page-wrapper {
-      position: inherit;
-      margin: 0;
-    }
-
-    #side-menu-nav-wrapper {
-      display: none;
-    }
-  }
-
+#wrapper {
   //wide screen
   @media (min-width: 768px) {
     #page-wrapper {
@@ -62,55 +38,6 @@ body {
     }
   }
 }
-
-//
-//  .body-small .navbar-static-side {
-//    display: none;
-//    z-index: 2001;
-//    position: absolute;
-//    width: 70px;
-//  }
-//
-//  .body-small.mini-navbar .navbar-static-side {
-//    display: block;
-//  }
-//
-//  .lock-word {
-//    display: none;
-//  }
-//
-//  .navbar-form-custom {
-//    display: none;
-//  }
-//
-//  .navbar-header {
-//    display: inline;
-//    float: left;
-//  }
-//
-//  .sidebard-panel {
-//    z-index: 2;
-//    position: relative;
-//    width: auto;
-//    min-height: 100% !important;
-//  }
-//
-//  .sidebar-content .wrapper {
-//    padding-right: 0px;
-//    z-index: 1;
-//  }
-//
-//  .fixed-sidebar.body-small .navbar-static-side {
-//    display: none;
-//    z-index: 2001;
-//    position: fixed;
-//    width: @sidebar-width;
-//  }
-//
-//  .fixed-sidebar.body-small.mini-navbar .navbar-static-side {
-//    display: block;
-//  }
-//
 
 @media (max-width: 350px) {
 
