--- a/client/stylesheets/globals/navigation.import.less
+++ b/client/stylesheets/globals/navigation.import.less
@@ -40,19 +40,19 @@
 
 .navbar-top-links li {
   display: inline-block;
-}
 
-.navbar-top-links li:last-child {
-  margin-right: 40px;
-}
+  &:first-child {
+    margin-left: 20px;
+  }
 
-.body-small .navbar-top-links li:last-child {
-  margin-right: 0;
-}
+  &:last-child {
+    margin-right: 40px;
+  }
 
-.navbar-top-links li a {
-  padding: 20px 10px;
-  min-height: 50px;
+  a {
+    padding: 20px 10px;
+    min-height: 50px;
+  }
 }
 
 .dropdown-menu {
