added dropdowns with names imported from Revel to menuItems is pos linking

--- a/client/lib/components/sales_prediction/revel_menu_link/revel_link_menu_item/view.html
+++ b/client/lib/components/sales_prediction/revel_menu_link/revel_link_menu_item/view.html
@@ -7,6 +7,10 @@
           <i class="fa fa-plus-circle fa-lg add-pos-name"></i>
         </a>
       </div>
+      {{#if state$attachPosName}}
+        {{>render component='selectPos' item=this}}
+      {{/if}}
+
       <hr>
       <div class="col-md-12">
         <div class="row">
