Put better spinner

--- a/client/views/common/loading/loading.html
+++ b/client/views/common/loading/loading.html
@@ -1,5 +1,9 @@
 <template name="loading">
-  <div class="col-lg-12 m-lg p-lg page-center">
-    <div class="text-center" id="loader"></div>
+  <div class="col-lg-12 m-lg p-lg page-center loading-container">
+    <div class="spinner">
+      <div class="bounce1"></div>
+      <div class="bounce2"></div>
+      <div class="bounce3"></div>
+    </div>
   </div>
 </template>
