--- a/client/lib/components/sales_prediction/revel_menu_link/view.html
+++ b/client/lib/components/sales_prediction/revel_menu_link/view.html
@@ -1,5 +1,5 @@
 <template name="revelMenuLink">
-  <button class="btn btn-warning update-pos-btn" style="margin-left: 30px;">Update POS</button>
+  <button class="btn btn-warning update-pos-btn" style="margin-left: 30px;">Update Menu Items from POS</button>
   <div class="container-fluid revel-menu-link-component">
     <div class="agile-list row">
       {{#each state$menuItems}}
