--- a/client/views/layouts/main/main.html
+++ b/client/views/layouts/main/main.html
@@ -3,6 +3,8 @@
   <!-- Wrapper-->
   <div id="wrapper">
 
+    {{> FlyoutManager}}
+
     <!-- Navigation -->
     {{#if currentUser}}
       {{> render component="navigation" }}
