--- a/client/views/app/users/profile/profile.html
+++ b/client/views/app/users/profile/profile.html
@@ -9,7 +9,7 @@
     <div class="row animated">
       {{> render component="profile" id=id}}
       {{> render component="rosteredShifts" id=id}}
-      {{> render component="training" id=id}}
+      {{> render component="training" userId=id}}
     </div>
   </div>
 </template>
