added autoclose menu for mobile and open sub-menu on click

--- a/client/stylesheets/components/navigation.less
+++ b/client/stylesheets/components/navigation.less
@@ -44,7 +44,7 @@
         }
       }
 
-      &:hover {
+      &.show-sub-menu {
         ul.nav.nav-second-level.slider {
 
           .sub-menu-container(@item-count) {
