--- a/client/lib/components/navigations/top/organization_buttons/view.html
+++ b/client/lib/components/navigations/top/organization_buttons/view.html
@@ -1,20 +1,23 @@
 <template name="organizationButtons">
   {{#if isOrganizationOwner}}
-    <span style="margin-left: 150px;">Organization</span>
+    <span style="margin-left: 130px;">Organization</span>
   {{else}}
     <span>Organization</span>
   {{/if}}
 
+
   {{#if isOrganizationOwner}}
-    <span class="pull-right btn btn-sm btn-link open-flyout" data-id="organizationDetailsPage"><i class="fa fa-fw fa-cog"></i></span>
+    <span class="pull-right btn btn-sm btn-link organization-details-flyout organization-settings-buttons"><i
+      class="fa fa-fw fa-cog"></i></span>
   {{/if}}
 
   {{#if canInvite}}
-    <span class="pull-right btn btn-sm btn-link open-flyout" data-id="invitationsList"><i class="fa fa-fw fa-envelope"></i></span>
+    <span class="pull-right btn btn-sm btn-link open-flyout organization-settings-buttons" data-id="invitationsList"><i
+      class="fa fa-fw fa-envelope"></i></span>
   {{/if}}
 
   {{#if isOrganizationOwner}}
-    <div class="btn-group pull-right">
+    <div class="btn-group pull-right organization-settings-buttons">
       <button type="button" class="btn dropdown-toggle btn-link" data-toggle="dropdown" aria-expanded="false">
         <i class="fa fa-fw fa-plus"></i>
       </button>
