Fixing view ingredients in menu

--- a/client/lib/components/menuitems/detail/view.html
+++ b/client/lib/components/menuitems/detail/view.html
@@ -57,4 +57,12 @@
       {{> render component='commentsPanel' id=state$menu._id type='menu'}}
     </div>
   </div>
+
+  <!-- EDIT INGREDIENT-->
+  {{#if canViewStock}}
+    <div class="modal fade" id="editIngredientModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      {{> render component = 'editIngredientItem'}}
+    </div>
+  {{/if}}
+  <!-- /EDIT INGREDIENT -->
 </template>
