--- a/client/lib/components/stock/master_list/list/view.html
+++ b/client/lib/components/stock/master_list/list/view.html
@@ -6,7 +6,7 @@
       </div>
     </div>
     <hr>
-    <div class="ibox float-e-margins">
+    <div class="ibox">
       <div class="table-responsive">
         <table class="table table-striped">
           <thead>
