Fixed redudant scroll bar in side menu

--- a/client/stylesheets/components/navigation.less
+++ b/client/stylesheets/components/navigation.less
@@ -27,7 +27,7 @@
   #side-menu-nav-wrapper {
     bottom: 0;
     top: 0;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
     width: @sidebar-width;
 
