table view test

--- a/client/lib/components/menuitems/detail/view.html
+++ b/client/lib/components/menuitems/detail/view.html
@@ -35,6 +35,7 @@
               <th>Type</th>
               <th>Quantity</th>
               <th>Measure</th>
+              <th>Price</th>
               {{#if canEditMenu}}
                 <th></th>
               {{/if}}
