added price column for menu item detailed

--- a/client/lib/components/menuitems/prep_or_stock/item/view.html
+++ b/client/lib/components/menuitems/prep_or_stock/item/view.html
@@ -23,7 +23,7 @@
         {{/if}}
       </td>
       <td>
-        0
+        {{state$price}}
       </td>
       {{#if canEditMenu}}
         <td>
