Fixing select training sections permission

--- a/client/lib/components/users/profile/training/view.html
+++ b/client/lib/components/users/profile/training/view.html
@@ -7,15 +7,24 @@
       <div class="ibox-content">
 
         {{#each state$sections}}
-          <div class="form-group">
-            {{#if state$userSelectedSections _id}}
-              <input type="checkbox" class="section-checker" value="{{_id}}" checked="checked">
-            {{else}}
-              <input type="checkbox" class="section-checker" value="{{_id}}">
-            {{/if}}
+          {{#if canEditUsers}}
+            <div class="form-group">
+              {{#if state$userSelectedSections _id}}
+                <input type="checkbox" class="section-checker" value="{{_id}}" checked="checked">
+              {{else}}
+                <input type="checkbox" class="section-checker" value="{{_id}}">
+              {{/if}}
 
-            {{name}}
-          </div>
+              {{name}}
+            </div>
+          {{else}}
+            {{#if state$userSelectedSections _id}}
+              <div>
+                <i class="fa fa-check"></i> 
+                {{name}}
+              </div>
+            {{/if}}
+          {{/if}}
         {{/each}}
 
       </div>
