add/edit ingredients was improved

--- a/client/lib/components/job-items/submit/view.html
+++ b/client/lib/components/job-items/submit/view.html
@@ -195,7 +195,8 @@
         <div class="col-sm-10">
           <div class="input-group m-b">
             <span class="input-group-addon">$</span>
-            <input type="text" name="avgWagePerHour" class="form-control" placeholder="Average Wage of a Worker per Hour">
+            <input type="text" name="avgWagePerHour" class="form-control"
+                   placeholder="Average Wage of a Worker per Hour">
             <span class="input-group-addon">/ hour</span>
           </div>
         </div>
@@ -211,14 +212,16 @@
   </div>
   <!-- INGREDIENTS LIST-->
   {{#if canViewStock}}
-    <div class="modal fade" id="ingredientsListModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal fade" id="ingredientsListModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+         aria-hidden="true">
       {{> render component = 'stocksModalList' name="editJob"}}
     </div>
   {{/if}}
   <!-- /INGREDIENTS LIST -->
 
   <!-- ADD INGREDIENT-->
-  <div class="modal fade" id="addIngredientModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal fade" id="addIngredientModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+       aria-hidden="true">
     {{> render component = 'submitIngredient' isModal=true}}
   </div>
   <!-- /ADD INGREDIENT -->
