--- a/client/lib/components/stock/submit/view.html
+++ b/client/lib/components/stock/submit/view.html
@@ -1,69 +1,86 @@
 <template name="submitIngredientBody">
-    <form id="submitIngredientForm" class="form-horizontal" role="form">
-        <div class="form-group">
-            <label class="col-sm-4 control-label">Supplier's Code</label>
-            <div class="col-sm-6 ">
-                <input type="text" name="code" class="form-control" placeholder="Add Code" >
-            </div>
+  <form id="submitIngredientForm" class="form-horizontal" role="form">
+
+    <div class="form-group">
+      <label class="col-sm-4 control-label">Supplier's Code</label>
+
+      <div class="col-sm-6 ">
+        <input type="text" name="code" class="form-control" placeholder="Add Code">
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="col-sm-4 control-label">Name</label>
+
+      <div class="col-sm-6 ">
+        <input type="text" name="name" class="form-control" placeholder="Add Name">
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="col-sm-4 control-label">Supplier</label>
+
+      <div class="col-sm-6 ">
+        <select name="supplier" class="form-control">
+          <option value="">Select a supplier</option>
+          {{#each state$suppliers}}
+            <option value="{{_id}}">{{name}}</option>
+          {{/each}}
+        </select>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="col-sm-4 control-label">
+        Unit Ordered
+        <i class="fa fa-question-circle pull-right unit-ordered-popover btn-link" data-toggle="popover"
+           data-placement="top" data-trigger="focus" tabindex="0" role="button"></i>
+      </label>
+
+      <div class="col-sm-6">
+        <input type="text" name="unitOrdered" class="form-control" placeholder="Type a unit"/>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="col-sm-4 control-label">How much does each {{state$unitOrdered}} cost?</label>
+
+      <div class="col-sm-6">
+        <div class="input-group">
+          <span class="input-group-addon">$</span>
+          <input type="text" name="costPerPortion" class="form-control"
+                 placeholder="How much does each {{state$unitOrdered}} cost?">
         </div>
-        <div class="form-group">
-            <label class="col-sm-4 control-label">Description</label>
-            <div class="col-sm-6 ">
-                <input type="text" name="desc" class="form-control" placeholder="Add Description" >
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-4 control-label">Supplier</label>
-            <div class="col-sm-6 ">
-                <select name="supplier" class="form-control">
-                    <option value="">Select a supplier</option>
-                    {{#each state$suppliers}}
-                        <option value="{{_id}}">{{name}}</option>
-                    {{/each}}
-                </select>
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-4 control-label">Portion Ordered (b)</label>
-            <div class="col-sm-6">
-                <input type="text" name="portionOrdered" class="form-control" placeholder="Type a unit"/>
-                <!--<select name="portionOrdered" class="form-control">-->
-                <!--<option value="">Select a unit</option>-->
-                    <!--{{#each state$unitsOrdered}}-->
-                <!--<option>{{unit}}</option>-->
-                    <!--{{/each}}-->
-                <!--</select>-->
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-4 control-label">Cost per Portion (b)</label>
-            <div class="col-sm-6">
-                <div class="input-group">
-                    <span class="input-group-addon">$</span>
-                    <input type="text" name="costPerPortion" class="form-control" placeholder="Cost of a portion ordered" >
-                </div>
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-4 control-label">Portion Used (a)</label>
-            <div class="col-sm-6 ">
-                <input type="text" name="portionUsed" placeholder="Type a unit" class="form-control"/>
-                <!--<select name="portionUsed" class="form-control">-->
-                <!--<option value="">Select a unit</option>-->
-                    <!--{{#each state$unitsUsed}}-->
-                <!--<option>{{unit}}</option>-->
-                    <!--{{/each}}-->
-                <!--</select>-->
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-4 control-label">How many (a)'s in (b)</label>
-            <div class="col-sm-6">
-                <input type="text" name="unitSize" class="form-control" placeholder="Unit Size" >
-            </div>
-        </div>
-        {{#unless state$isModal}}
-            <button id="addIngredientBtn" type="submit" class="btn btn-primary">Add ingredient</button>
-        {{/unless}}
-    </form>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="col-sm-4 control-label">
+        Unit Used
+        <i class="fa fa-question-circle pull-right btn-link unit-used-popover" data-toggle="popover"
+           data-placement="top" data-trigger="focus" tabindex="0" role="button"></i>
+      </label>
+
+      <div class="col-sm-6 ">
+        <input type="text" name="unitUsed" placeholder="Type a unit" class="form-control"/>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="col-sm-4 control-label">
+        How many {{state$unitUsed}} are there in a {{state$unitOrdered}}?
+        <i class="fa fa-question-circle pull-right btn-link unit-size-popover" data-toggle="popover"
+           data-placement="top" data-trigger="focus" tabindex="0" role="button"></i>
+      </label>
+
+      <div class="col-sm-6">
+        <input type="text" name="unitSize" class="form-control" placeholder="Unit Size">
+      </div>
+    </div>
+
+    {{#unless state$isModal}}
+      <button id="addIngredientBtn" type="submit" class="btn btn-primary">Add ingredient</button>
+      <button id="cancel" class="btn btn-primary">Cancel</button>
+    {{/unless}}
+  </form>
 </template>
