Pos menu linking improvement

--- a/client/stylesheets/components/pos-menu-linking.less
+++ b/client/stylesheets/components/pos-menu-linking.less
@@ -1,10 +1,6 @@
 @import "../theme-globals.import.less";
 
-//settings link functionality
-.revel-menu-link-component {
-  margin-top: 15px;
-  font-size: 16px;
-
+.pos-menu-link-component {
   .revel-link-menu-item-component {
     &:hover {
       background-color: @hover-gray-color;
