--- a/client/lib/components/sales-prediction/pos-menu-linking/view.html
+++ b/client/lib/components/sales-prediction/pos-menu-linking/view.html
@@ -1,6 +1,5 @@
-<template name="revelMenuLink">
-  <button class="btn btn-warning update-pos-btn" style="margin-left: 30px;">Update Menu Items from POS</button>
-  <div class="container-fluid revel-menu-link-component">
+<template name="posMenuLinking">
+  <div class="container-fluid pos-menu-link-component ">
     <div class="agile-list row">
       {{#each state$menuItems}}
         <div class="col-md-4 pos-item-positioning">
