Refactored server side structure

--- a/client/lib/components/sales-prediction/pos-menu-linking/header-controls/view.html
+++ b/client/lib/components/sales-prediction/pos-menu-linking/header-controls/view.html
@@ -1,7 +1,8 @@
 <template name="posMenuLinkingHeader">
   <div class="title-action pos-menu-liking-header">
     <button class="btn btn-warning update-pos-menu-items-button">Update POS Menu Items</button>
-    <button class="btn {{#if state$isSalesSynced}}white-bg{{else}}btn-primary{{/if}} sync-sales-button">Sync sales
+    <button class="btn {{#if state$isSalesSynced}}white-bg{{else}}btn-primary{{/if}} sync-sales-button">
+      Sync sales
     </button>
   </div>
 </template>
